# Gloss

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC-gloss.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: chat.rs  mod.rs  notebooks.rs  notes.rs  settings.rs  sources.rs
src-tauri/src/db/: app_db.rs  migrations.rs  mod.rs  notebook_db.rs
src-tauri/src/ingestion/: chunk.rs  embed.rs  extract.rs  mod.rs  summarize.rs  vision.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/providers/: anthropic.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/retrieval/: citations.rs  context.rs  hybrid_search.rs  mod.rs
src-tauri/src/studio/: mod.rs
src/components/chat/: ChatPanel.tsx
src/components/layout/: PanelLayout.tsx  StatusBar.tsx  ToastContainer.tsx
src/components/notebooks/: NotebookSidebar.tsx
src/components/notes/: NotesPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/components/sources/: SourcesPanel.tsx
src/lib/: events.ts  tauri.ts  types.ts
src/stores/: chatStore.ts  noteStore.ts  notebookStore.ts  settingsStore.ts  sourceStore.ts  studioStore.ts  toastStore.ts
src/styles/: globals.css
